--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -6,8 +6,14 @@
 <style>
 html, body, div, span, ul, li, a{margin:0px, padding:0px; background: #dfdfdf;}
 #wrapper{width:100%; float:left;}
-#sidebar{ float:left; padding-right:20px; margin-right:20px; border-right: 5px solid #efefef; height:200px;}
+#sidebar{ float:left; padding-right:20px; margin-right:20px; border-right: 5px solid #efefef; background:#000; }
 #content{ float:left;}
+
+.navigation-section{color:#fff; background:#000; padding:3px; font-size:.9em; font-weight:bold;}
+.navigation-module{color:#aaa; background:#000; margin-left:18px; font-size:.8em;}
+.navigation-menu{color:#fff; background:#000; list-style-type: none;}
+.navigation-menu li a:hover{background: #000; color: #aaf;}
+.navigation-menu li a{background: #000; color: #fff;}
 </style>
 
     </head>
