--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -12,8 +12,9 @@ html, body, div, span, ul, li, a{margin:0px, padding:0px; background: #dfdfdf;}
 .navigation-section{color:#fff; background:#000; padding:3px; font-size:.9em; font-weight:bold;}
 .navigation-module{color:#aaa; background:#000; margin-left:18px; font-size:.8em;}
 .navigation-menu{color:#fff; background:#000; list-style-type: none;}
-.navigation-menu li a:hover{background: #000; color: #aaf;}
-.navigation-menu li a{background: #000; color: #fff;}
+.navigation-menu li{background: #000;}
+.navigation-menu li a:hover{color: #aaf;}
+.navigation-menu li a{background: #000;color: #fff;}
 </style>
 
     </head>
