--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -15,6 +15,7 @@ html, body, div, span, ul, li, a{margin:0px, padding:0px; background: #dfdfdf;}
 .navigation-menu li{background: #000;}
 .navigation-menu li a:hover{color: #aaf;}
 .navigation-menu li a{background: #000;color: #fff;}
+.navigation-current a{color: #f00 !important;}
 </style>
 
     </head>
